Minor changes to revert to original code  for Q1

--- a/lab_3/w271_Lab3.Rmd
+++ b/lab_3/w271_Lab3.Rmd
@@ -88,8 +88,8 @@ ls.str(ex)
 
 head(data)
 
-#df <- pdata.frame(data, index=c("state", 'year'))
-#head(df, 20)
+df <- pdata.frame(data, index=c("state", 'year'))
+head(df, 20)
 ```
 
 
